# duktape-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.js  main.cpp
include/: duk_wrapper.h  dynamic_tuple.h
src/: duk_wrapper.cpp  example.cpp  main.cpp
